@@ -13,6 +13,7 @@ from lutris.runners.json import load_json_runners
 from lutris.runtime import RuntimeUpdater
 from lutris.services import DEFAULT_SERVICES
 from lutris.services.lutris import sync_media
+from lutris.util import update_cache
 from lutris.util.graphics import drivers, vkquery
 from lutris.util.linux import LINUX_SYSTEM
 from lutris.util.log import logger
@@ -178,15 +179,25 @@ def init_lutris():
             settings.write_setting(service, True, section="services")
 
 
-def update_runtime():
+def update_runtime(force=False):
     """Update runtime components"""
-    runtime_updater = RuntimeUpdater()
-    components_to_update = runtime_updater.update()
-    if components_to_update:
-        while runtime_updater.current_updates:
-            time.sleep(0.3)
+    runtime_call = update_cache.get_last_call("runtime")
+    if force or not runtime_call or runtime_call > 3600 * 12:
+        runtime_updater = RuntimeUpdater()
+        components_to_update = runtime_updater.update()
+        if components_to_update:
+            while runtime_updater.current_updates:
+                time.sleep(0.3)
+        update_cache.write_date_to_cache("runtime")
     for dll_manager_class in (DXVKManager, DXVKNVAPIManager, VKD3DManager, D3DExtrasManager, dgvoodoo2Manager):
-        dll_manager = dll_manager_class()
-        dll_manager.upgrade()
-    sync_media()
+        key = dll_manager_class.__name__
+        key_call = update_cache.get_last_call(key)
+        if force or not key_call or key_call > 3600 * 6:
+            dll_manager = dll_manager_class()
+            dll_manager.upgrade()
+            update_cache.write_date_to_cache(key)
+    media_call = update_cache.get_last_call("media")
+    if force or not media_call or media_call > 3600 * 24:
+        sync_media()
+        update_cache.write_date_to_cache("media")
     logger.info("Startup complete")
